# zero2prod

./: Cargo.toml  Dockerfile  README.md
.sqlx/: query-793f0df728d217c204123f12e4eafd6439db2d49d0cb506618ae9e780c7e0558.json
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
