[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Kunal Yadav yadavkunal13.ky@gmail.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = { version = "4", features = ["experimental-introspection"] }
ahash = "0.7.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = "0.11"
serde={version = "1", features = ["derive"]}
config="0.13"
uuid = { version = "1", features = ["v4"] }
chrono={version = "0.4.22",default-features = false,features = ["clock"]}
log="0.4"
env_logger = "0.9"
tracing={version = "0.1", features = ["log"]}

[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]
